refactor: many code, bugfix: error message when there is no such title in database